# candy_machine

./: .gitignore  Anchor.toml  README.md  collection-keys.json  constants.ts  helpers.ts  package.json  recover.json  utils.ts
backup_programs/bank/: Cargo.toml
backup_programs/bank/src/: lib.rs
backup_programs/bank/src/instructions/: init_bank.rs
backup_programs/bank/src/state/: bank.rs
programs/bank/: Cargo.toml
programs/bank/src/: lib.rs
programs/bank/src/instructions/: init_bank.rs  mod.rs
programs/bank/src/state/: mod.rs
programs/farm/: Cargo.toml
programs/farm/src/: constants.rs  context.rs  error.rs  lib.rs  utils.rs
programs/farm/src/instructions/: add_uri.rs  init_farm.rs  mint_nft.rs  mod.rs  set_collection.rs  update.rs
programs/farm/src/state/: farm.rs  mod.rs
programs/nft_buoy/: Cargo.toml
programs/nft_buoy/src/: error.rs  lib.rs  state.rs
programs/nft_buoy/src/candy_machine/: get_state.rs  initialize.rs  mod.rs  update.rs
programs/nft_buoy/src/collection/: mod.rs  set_collection.rs
programs/nft_buoy/src/mint/: mint_nft.rs
scripts/: addUris.ts  bootstrapWallets.ts  collection_urls.json  createCollection.ts  getCandyMachineState.ts  getFarmData.ts  index.ts  initializeCandyMachine.ts  initializeFarm.ts  metadata.json  mintNFT.ts
tests/: addUris.ts  bootstrapWallets.ts  createCollection.ts  fetchFarmAcc.ts  getCandyMachineState.ts  initializeCandyMachine.ts  initializeFarm.ts  mintNFT.ts  updateCandyMachine.ts
