[package]
name = "farm"
version = "0.0.1"
description = "Art Farm"
authors = ["Nunya <nuntya@biz.com>"]
edition = "2018"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "farm"

[features]
no-entrypoint = []

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
mpl-token-metadata = { version = "1.2.10", features = [ "no-entrypoint" ] }
spl-token = { version = "3.1.1", features = [ "no-entrypoint" ] }
solana-program = "1.9.18"
# bank = { path = "../bank", features = ["cpi"] }
serde = "1.0"
serde_json = "1.0"
